# aoc-2022

./: Cargo.toml  Makefile  output
src/: day01.c  day02.c  day03.c  day04.c  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs
src/shared/: input.c
